cabal-version:      2.4
name:               euler-problems
version:            0.1.0.0


extra-source-files:
    CHANGELOG.md
    README.md

executable euler-problems
    main-is:          Main.hs

    -- other-extensions:
    build-depends:    base ^>=4.14.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
